--- a/main.kv
+++ b/main.kv
@@ -24,6 +24,7 @@
                         size_hint: 1, .1
                         Button:
                             background_normal: 'data/images/nav/camera.png'
+                            on_release: root.do_take_picture()
                         Button:
                             background_normal: 'data/images/nav/map.png'
                             background_down: 'data/images/nav/map.png'
