Rename operator to ssoper to avoid conflicts

--- a/main.kv
+++ b/main.kv
@@ -1,7 +1,7 @@
 <Map>:
     id: 'googleMapWidget'
 
-<Operator>:
+<TopLevel>:
     BoxLayout:
         id: 'rootLayout'
         orientation: 'vertical'
