Added checklist capability

--- a/main.kv
+++ b/main.kv
@@ -24,6 +24,9 @@
             text: 'Type'
             on_release: app.map.do_cycle_map_type()
 
+<ChecklistWidget@ScrollView>:
+    id: checklist_layout
+    
 <RootWidget>:
     BoxLayout:
         id: root_widget
